--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
       <meta charset="UTF-8">
-
+      <link rel="stylesheet" href="CSS/estiloPagPrincipal.css">
     </head>
     <body>
-        <h1>Recetas de Odin</h1>
+        <h1 class="titulo">Recetas de Odin</h1>
         <ul>
          <li><a href="recetas/tacosDePollo.html">Tacos de pollo desmenuzado en olla de cocciòn lenta Fiesta.</a></li>
          <li><a href="recetas/tacosDeCarne.html">Tacos de Carne Frita.</a></li>
