Agregando estilo a tacosDeCarne.html y corrigiendo tacosDePollo.html

--- a/recetas/tacosDeCarne.html
+++ b/recetas/tacosDeCarne.html
@@ -2,17 +2,18 @@
 <html>
     <head>
       <meta charset="UTF-8">
+      <link rel="stylesheet" href="../CSS/estiloPagTacoCarne.css">
     </head>
     <body>
-        <h1>Tacos de Carne Frita</h1>
-        <img src="../imagenes/tacosDeCarne.png " alt="Tacos de Carne Frita">
-        <h2>Receta de Tacos de Carne Frita</h2>
-        <p>Estos tacos crujientes de carne frita, a vecer llamados"Tacos de Arizona",estan
+        <h1 class="titulo">Tacos de Carne Frita</h1>
+        <img class="imagen" src="../imagenes/tacosDeCarne.png " alt="Tacos de Carne Frita">
+        <h2 class="subtitulo">Receta de Tacos de Carne Frita</h2>
+        <p class="parrafo">Estos tacos crujientes de carne frita, a vecer llamados"Tacos de Arizona",estan
          teniendo un momento en TikTok. Presiona la carne cruda en dobre la tortilla antes
         de freìr todo para obtener el exterior crujiente definitivo con un relleno tierno 
         y jugoso. Y son fàciles de hacer, asì es como.</p>
-        <h3>Ingredientes</h3>
-        <ul>
+        <h3 class="titIngredientes">Ingredientes</h3>
+        <ul class="ingredientes">
             <li>8 tortillas de maìz (5 pulagadas)</li>
             <li>2 cucharadas de condimento para tacos</li>
             <li>3/4 cucharadita de sal kosher, cantidad dividida</li>
@@ -22,8 +23,8 @@
             <li>rodajas de lima, para sevir</li>
             <li>1/4 taza de salsa, o segùn sea necesario, para servir</li>
         </ul>
-        <h3>Pasos:</h3>
-        <ol>
+        <h3 class="titPasos">Pasos:</h3>
+        <ol class="pasos">
             <li>Reùna todos los ingredientes.</li>
             <li>Coloque 8 tortillas planas sobre una superficie.</li>
             <li>Combine la carne de res, el condimento para tacos y 1/2 cucharadita de sal en un tazòn mediano.</li>
