Agregando estilo a tacosDePuerco.html

--- a/recetas/tacosDePuerco.html
+++ b/recetas/tacosDePuerco.html
@@ -2,17 +2,18 @@
 <html>
     <body>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../CSS/estiloPagTacoCerdo.css">
     </body>
     <head>
-      <h1>Tacos de Puerco desmenuzado en olla de cocciòn lenta</h1>
-      <img src="../imagenes/tacosDeCerdo.png" alt="Tacos de puerco desmenuzado">
-      <h2>Receta de Tacos de Puerco</h2>
-      <p>Este versátil puerco desmenuzado en olla de cocción lenta no podría ser más fácil. Simplemente coloque la carne en la olla de cocción lenta, 
+      <h1 class="titulo">Tacos de Puerco desmenuzado en olla de cocciòn lenta</h1>
+      <img class="imagen" src="../imagenes/tacosDeCerdo.png" alt="Tacos de puerco desmenuzado">
+      <h2 class="subtitulo">Receta de Tacos de Puerco</h2>
+      <p class="parrafo">Este versátil puerco desmenuzado en olla de cocción lenta no podría ser más fácil. Simplemente coloque la carne en la olla de cocción lenta, 
         agregue saborizantes, cocine y desmenuce, y luego mezcle los ingredientes saborizantes y la grasa para obtener una salsa increíble. 
         Genial para tacos o quesadillas, o déjelo en trozos para su plato principal. Agregue los ingredientes que desee: rodajas de aguacate, 
         cilantro, jugo de lima, cebolla picada, repollo rallado, rábanos, ¡usted decide!</p>
-      <h3>Ingredientes</h3>
-      <ul>
+      <h3 class="titIngredientes">Ingredientes</h3>
+      <ul class="ingredientes">
         <li>1 lomo de cerdo asado (6 libras)</li>
         <li>8 dientes de ajo</li>
         <li>4 hojas de laurel</li>
@@ -30,8 +31,8 @@
         <li>1 manojo de ràbanos, en rodajas finas</li>
         <li>3 limas, cortadas en octavos</li>
       </ul>
-      <h3>Pasos:</h3>
-      <ol>
+      <h3 class="titPasos">Pasos:</h3>
+      <ol class="pasos">
         <li>Combine la carne de cerdo asado, los dientes de ajo, los tomates, la cebolla, los chiles guajillos, el comino, la sal y la 
           pimienta en una olla de cocciòn lenta grande (de 5 a 6 cuartos); vierta el caldo de pollo sobre el asado.
         </li>
