Mejorando el estiloPagPrincipal.css y editando index.html.
Acabe de dar un estilo mejor a estiloPagPrincipal.css para que este
tenga cuadros separados con colores y dentro de estas esten los link
que llevan a las paginas de las recetas, y edite index.html colocando
"div" a cada "li" para que esta esten separadas y dentro de los "div"
le coloque clases para tenerlas por separado a cada una.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     </head>
     <body>
         <h1 class="titulo">Recetas de Odin</h1>
-        <ul>
-         <li><a href="recetas/tacosDePollo.html">Tacos de pollo desmenuzado en olla de cocciòn lenta Fiesta.</a></li>
-         <li><a href="recetas/tacosDeCarne.html">Tacos de Carne Frita.</a></li>
-         <li><a href="recetas/tacosDePuerco.html">Tacos de Puerco desmenuzado en olla de cocciòn lenta.</a></li>
+        <ul class="listado">
+         <div class="pollo">
+           <li><a href="recetas/tacosDePollo.html" class="colorpollo">Tacos de pollo desmenuzado en olla de cocciòn lenta Fiesta.</a></li>
+         </div>
+         <div class="carne">
+           <li><a href="recetas/tacosDeCarne.html" class="colorcarne">Tacos de Carne Frita.</a></li>
+         </div>
+         <div class="puerco">
+           <li><a href="recetas/tacosDePuerco.html" class="colorpuerco">Tacos de Puerco desmenuzado en olla de cocciòn lenta.</a></li>
+         </div>
         </ul>
     </body>
 </html>
